--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     
     /* SEÇÃO RESERVADA PARA IMAGEM DE FUNDO REAL */
     /* ATENÇÃO: Substitua 'caminho/para/sua/imagem.jpg' pelo link ou caminho da imagem */
-    background-image: url('https://br.pinterest.com/pin/300615343914314518/'); 
+    background-image: url('https://assets.pinterest.com/ext/embed.html?id=300615343914314518" height="618" width="345" frameborder="0" scrolling="no" ></iframe>'); 
     background-size: cover; /* Faz a imagem cobrir toda a área */
     background-repeat: no-repeat; /* Evita repetição */
     background-attachment: fixed; /* Opcional: Fundo fixo ao rolar */
